--- a/homework2.ipynb
+++ b/homework2.ipynb
@@ -640,19 +640,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "c55c7563",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "run id: 0ece247281dc4804a6a3e2f1c2680f68, test_rmse: 5.5674\n",
-      "run id: 24d1858a457740f9a0f967ce419c7172, test_rmse: 5.5674\n",
-      "run id: 36c88e26072948b587112b06b5b72b99, test_rmse: 5.5853\n",
-      "run id: 97fd3f09be1b40ac9bc5aa57d22e6d6f, test_rmse: 5.5853\n",
-      "run id: 5ec021897fa04c81b2c18320e2a77a88, test_rmse: 5.5921\n"
+     "ename": "NameError",
+     "evalue": "name 'client' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m experiment \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241m.\u001b[39mget_experiment_by_name(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrandom-forest-best-models\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m runs \u001b[38;5;241m=\u001b[39m client\u001b[38;5;241m.\u001b[39msearch_runs(\n\u001b[1;32m      3\u001b[0m     experiment_ids\u001b[38;5;241m=\u001b[39mexperiment\u001b[38;5;241m.\u001b[39mexperiment_id,\n\u001b[1;32m      4\u001b[0m     filter_string\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmetrics.test_rmse < 7\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m     order_by\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmetrics.test_rmse ASC\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m      8\u001b[0m )\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m run \u001b[38;5;129;01min\u001b[39;00m runs:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'client' is not defined"
      ]
     }
    ],
